--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -27,7 +27,7 @@
                 <div class="wmuSliderWrapper">
                     <article style="position: absolute; width: 100%; opacity: 0;">
                         <div class="banner_right">
-                            <h1>Welcome to <span class="color1">G</span>elios<span class="color1">.</span></h1>
+                            <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
                             <h2>Awesome , Clean & Unique Template</h2>
                             <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
                         </div>
@@ -35,7 +35,7 @@
                     </article>
                     <article style="position: relative; width: 100%; opacity: 1;">
                         <div class="banner_right">
-                            <h1>Welcome to <span class="color1">G</span>elios<span class="color1">.</span></h1>
+                            <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
                             <h2>There are many variations</h2>
                             <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
                         </div>
@@ -55,17 +55,19 @@
         <div class="container">
             <div class="col-md-4 box_1">
                 <i class="icon1"> </i>
-                <h3>Web Design</h3>
-                <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                <h3>自然语言系统</h3>
+                <p>拥有最强大的中文语言系统， 能听懂你所表述的每句话，并能作出相应的回答。</p>
+                <p><span class="color1">2000</span>万条知识图谱，<span class="color1">100</span>万条平行语料，<span class="color1">90%</span>中文语义识别分析能力，中文自然语言处理，中文自然语言合成</p>
             </div>
             <div class="col-md-4 box_1">
                 <i class="icon2"> </i>
-                <h3>Web Development</h3>
-                <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                <h3>支持群聊的人工智能</h3>
+                <p>超智云端大脑，支持多人群聊，能记忆你的语言信息，并对每个人作出相应的回答。</p>
+                <p><span class="color1">9</span>层语义理解体系，多信息语义处理，云脑处理</p>
             </div>
             <div class="col-md-4 box_1">
                 <i class="icon3"> </i>
-                <h3>Simple and Clean</h3>
+                <h3>用户个性化定制</h3>
                 <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
             </div>
         </div>
