update logout jump to index

--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load compress %}
 
-{% block title %}流氓兔{% endblock %}
+{% block title %}BotDocker{% endblock %}
 {% block meta %}
 <meta />
 {% compress css%}
