home view banner

--- a/maker/static/css/basecss/style.css
+++ b/maker/static/css/basecss/style.css
@@ -291,6 +291,7 @@ body a{
 .wmuSlider {
 	position: relative;
 	overflow: hidden;
+	min-height:600px;
 }
 .wmuSlider .wmuSliderWrapper article img {
 	max-width: 100%;
