--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -21,34 +21,42 @@
             </div>
         </div>
 </div> -->
-<div class="banner">
-        <div class="banner_container">
+
             <div class="wmuSlider example1">
+
                 <div class="wmuSliderWrapper">
                     <article style="position: absolute; width: 100%; opacity: 0;">
+                        <div class="banner">
+                            <div class="banner_container">
                         <div class="banner_right">
                             <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
                             <h2>Awesome , Clean & Unique Template</h2>
                             <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
                         </div>
                         <div class="clearfix"></div>
+                            </div>
+                        </div>
                     </article>
                     <article style="position: relative; width: 100%; opacity: 1;">
+                        <div class="about_banner">
+                            <div class="banner_container">
                         <div class="banner_right">
                             <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
                             <h2>There are many variations</h2>
                             <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
                         </div>
                         <div class="clearfix"></div>
+                            </div>
+                        </div>
                     </article>
                 </div>
+
+
                 <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a>
                 <script src="/static/js/basejs/jquery.wmuSlider.js"></script>
                 <script>
                     $('.example1').wmuSlider();
                 </script>
-            </div>
-        </div>
     </div>
 
     <div class="grid_1 text-center">
