--- a/maker/templates/base.html
+++ b/maker/templates/base.html
@@ -36,8 +36,8 @@
       <script type="text/javascript" src="/static/js/basejs/hover_pack.js"></script>
       <script type="text/javascript" src="/static/js/basejs/responsive-nav.js"></script>
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <!--<script type="text/javascript" src="{% static "js/jquery-1.11.3.min.js"%}"></script>-->
-      <!--<script type="text/javascript" src="{% static "js/common.js"%}"></script>-->
+      <script type="text/javascript" src="{% static "js/jquery-1.11.3.min.js"%}"></script>
+      <script type="text/javascript" src="{% static "js/common.js"%}"></script>
       <script type="application/x-javascript"> 
              addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
       </script>
