wx bot ctrl -patch1

--- a/maker/uc/templates/uc_base.html
+++ b/maker/uc/templates/uc_base.html
@@ -29,6 +29,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   -->
   <link rel="stylesheet" href="/static/dist/css/skins/skin-blue.min.css">
 
+  <link href="/static/css/toastr.css" rel="stylesheet">
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -128,6 +130,8 @@ desired effect
 <!-- AdminLTE App -->
 <script src="/static/dist/js/app.min.js"></script>
 
+<script type="text/javascript" src="/static/js/toastr.js"></script>
+<script src="/static/js/my_common.js"></script>
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
