--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -25,14 +25,45 @@
 {% endblock %}
 
 {% block uc_content %}
+      <div class="example-modal">
+        <div class="modal modal-default fade" id="wxbotModal" >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">微信机器人控制面板</h4>
+              </div>
+              <div class="modal-body">
+               <div class="align-center">
+                 <div>
+                   <img datasrc="{{ qrurl}}" id="qrcode" />
+                  </div>
+                  <p id ="desp"></p>
+                </div>
+                <div class="progress" id="progress"></div>
+              </div>
+              <div class="modal-footer">
+               <button onclick="startWxBot()" id="startBtn"   type="button" class="btn btn-primary">启动</button>
+               <button onclick="stopWxBot()"  id="stopBtn"   type="button" class="btn btn-warning">关闭</button>
+              </div>
+            </div>
+            <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
+      </div>
+      <!-- /.example-modal -->
+
     <div class="row">
         <div class="col-md-4">
           <!-- Widget: user widget style 1 -->
           <div class="box box-widget widget-user">
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header bg-green">
-              <h3 class="widget-user-username">李开复</h3> 
-              <h5 class="widget-user-desc">微信机器人</h5>
+              <h3 class="widget-user-username">微信机器人</h3> 
+              <h5 class="widget-user-desc" id="wx_bot_status">未启动</h5>
             </div>
             <div class="widget-user-image">
               <img class="img-circle" src="/static/dist/img/weixin.jpg" alt="User Avatar">
@@ -41,20 +72,20 @@
               <div class="row">
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-<a class="btn">
-<i class="fa fa-play"></i>
-启动
-</a>
+                    <a class="btn" onclick="startWxBotModal()" id="startBtn" >
+                     <i class="fa fa-play"></i>
+                     开关
+                    </a>
                   </div>
                   <!-- /.description-block -->
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4 border-right">
                   <div class="description-block">
-<a class="btn">
-<i class="fa fa-pause"></i>
-停止
-</a>
+                    <a class="btn" onclick="stopWxBot()"  id="stopBtn">
+                      <i class="fa fa-pause"></i>
+                      配置
+                    </a>
                   </div>
                   <!-- /.description-block -->
                 </div>
@@ -81,8 +112,8 @@
           <div class="box box-widget widget-user">
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header bg-aqua-active">
-              <h3 class="widget-user-username">李开复</h3>
-              <h5 class="widget-user-desc">QQ机器人</h5>
+              <h3 class="widget-user-username">QQ机器人</h3>
+              <h5 class="widget-user-desc" id="wx_bot_status">开发中...</h5>
             </div>
             <div class="widget-user-image">
               <img class="img-circle" src="/static/dist/img/qq.jpg" alt="User Avatar">
@@ -131,8 +162,8 @@
           <div class="box box-widget widget-user">
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header bg-red">
-              <h3 class="widget-user-username">李开复</h3>
-              <h5 class="widget-user-desc">微博机器人</h5>
+              <h3 class="widget-user-username">微博机器人</h3>
+              <h5 class="widget-user-desc" id="wx_bot_status">开发中...</h5>
             </div>
             <div class="widget-user-image">
               <img class="img-circle" src="/static/dist/img/weibo.jpg" alt="User Avatar">
@@ -186,32 +217,27 @@
 
       <!-- /.row -->
 {% endblock %}
-{% block your_js %}
+{% block my_js %}
 <script type="text/javascript" src="/static/js/progressbar.js"></script>
 <script type="text/javascript">
     var line;
-    //var login = 0;
+    function startWxBotModal() {
+        $('#wxbotModal').modal('show');
+    }
     function startWxBot() {
-          //updateImg();
           updateUI(9);
           console.log("CY start Bot");
-          var sid = getCookie('sid');
-          console.log(sid);
 
-          if (sid != "") {
-            url = '/wxbot/start/' + sid + '/';
+            url = '/uc/wxbot/start/';
             console.log(url);
             $.ajax({
                 url: url,
-                //dataType: 'json',
                 type: 'get',
                 contentType: 'application/json',
-                //data: JSON.stringify( { "model" : $("input[name='model']:checked").val(), "description": "" } ),
                 success: function(data) {
                     console.log(JSON.stringify(data));
                     updateImg();
                     startProgress();
-                    startlog();
                     startCheck();
                     updateUI(1);
                 },
@@ -220,32 +246,22 @@
                     updateUI(0);
                 }
             });
-          }
-
-         console.log("CY start Bot  --END");
     }
+
     function stopWxBot() {
         if(confirm("确定停止您的机器人吗？?")) {
           updateUI(9); 
           if (line) {
               line.set(0.0);
           }
-          console.log("CY stop Bot");
-          var sid = getCookie('sid');
-          console.log(sid);
-
-          if (sid != "") {
-            url = '/wxbot/stop/' + sid + '/';
+            url = '/uc/wxbot/stop/';
             console.log(url);
             $.ajax({
                 url: url,
-                //dataType: 'json',
                 type: 'get',
                 contentType: 'application/json',
-                //data: JSON.stringify( { "model" : $("input[name='model']:checked").val(), "description": "" } ),
                 success: function(data) {
                     console.log(JSON.stringify(data));
-                    stoplog();
                     updateUI(0);
                 },
                 error: function( jqXhr, textStatus, errorThrown ){
@@ -253,43 +269,9 @@
                     updateUI(1);
                 }
             });
-          }
 
          console.log("CY stop Bot  --END");
 
-
-        }
-    }
-
-    function restartWxBot() {
-        if(confirm("确定重启您的机器人吗？?")) {
-          updateUI(9);
-          console.log("CY restart Bot");
-          var sid = getCookie('sid');
-          console.log(sid);
-
-          if (sid != "") {
-            url = '/wxbot/restart/' + sid + '/';
-            console.log(url);
-            $.ajax({
-                url: url,
-                //dataType: 'json',
-                type: 'get',
-                contentType: 'application/json',
-                //data: JSON.stringify( { "model" : $("input[name='model']:checked").val(), "description": "" } ),
-                success: function(data) {
-                    console.log(JSON.stringify(data));
-                    startProgress();
-                    startCheck();
-                    updateImg();
-                    updateUI(1);
-                },
-                error: function( jqXhr, textStatus, errorThrown ){
-                    console.log( errorThrown );
-                    updateUI(0);
-                }
-            });
-          }
         }
     }
 
@@ -328,19 +310,13 @@
 
 
     function updateImg(){
-          var sid = getCookie('sid');
           var newqr = ""
-          console.log(sid);
-
-          if (sid != "") {
-            var url = '/wxbot/getqr/' + sid + '/';
+            var url = '/uc/wxbot/getqr/';
             console.log(url);
             $.ajax({
                 url: url,
-                //dataType: 'json',
                 type: 'get',
                 contentType: 'application/json',
-                //data: JSON.stringify( { "model" : $("input[name='model']:checked").val(), "description": "" } ),
                 success: function(data) {
                     var result = JSON.parse(JSON.stringify(data));
                     console.log(result);
@@ -357,7 +333,6 @@
                     console.log( errorThrown );
                 }
             });
-         }
    }
 
    function updateUI(status) {
@@ -370,7 +345,7 @@
        } else if (status == 0){
            $("#qrcode").hide();
            $("#desp").show();
-           $("#desp").html("<h3>您尚未创建或启动微信机器人， 请点击“启动”为您创建</h3>");
+           $("#desp").html("<h5>您尚未创建或启动微信机器人， 请点击“启动”为您创建</h5>");
            $("#startBtn").removeAttr("disabled");
            $("#stopBtn").attr('disabled',"true");
            $("#restartBtn").attr('disabled',"true");
@@ -381,12 +356,13 @@
            $("#stopBtn").attr('disabled',"true");
            $("#restartBtn").attr('disabled',"true");
        } else if (status == 2) {
-
+           showToast('error',"xxxxxxx");
            console.log("UPDATE UI with 2");
            $("#qrcode").hide();
            line.set(0.0);
            $("#desp").show();
-           $("#desp").html("<h3>恭喜，您的微信机器人已经启动完成， 快和您的朋友玩起来吧！</h3>");
+           $("#wx_bot_status").html("<h5>恭喜，您的微信机器人已经启动完成， 快和您的朋友玩起来吧！</h5>");
+           $("#desp").html("<h5>恭喜，您的微信机器人已经启动完成， 快和您的朋友玩起来吧！</h5>");
            $("#startBtn").attr('disabled',"true");
            $("#stopBtn").removeAttr("disabled");
            $("#restartBtn").removeAttr("disabled");
@@ -396,11 +372,8 @@
 
     function checkForLogin() {
           console.log("CY check login status");
-          var sid = getCookie('sid');
-          console.log(sid);
 
-          if (sid != "") {
-            url = '/wxbot/getstatus/' + sid + '/';
+            url = '/uc/wxbot/getstatus/';
             $.ajax({
                 url: url,
                 type: 'get',
@@ -420,7 +393,6 @@
 
                 }
             });
-          }
     }
 
 
@@ -440,11 +412,8 @@
     function checkWxBotInitStatus() {
           updateUI(0);
           console.log("CY check Bot status");
-          var sid = getCookie('sid');
-          console.log(sid);
 
-          if (sid != "") {
-            url = '/wxbot/getstatus/' + sid + '/';
+            url = '/uc/wxbot/getstatus/' ;
             console.log(url);
             $.ajax({
                 url: url,
@@ -456,10 +425,9 @@
                     if (result.rc == 2) {
                         showToast('error',"您的微信机器人已在运行");
                         updateUI(1);
-                        startlog();
                     } else if (result.rc == 1) {
-                        showToast('error',"您的微信机器人虽在运行但未登陆成功，现在给您重新启动，请通过手机客户端扫描二维码"); 
-                        restartWxBot();                  
+                        showToast('error',"TODO: 您的微信机器人虽在运行但未登陆成功，现在给您重新启动，请通过手机客户端扫描二维码"); 
+                        //restartWxBot();                  
                     } else {
                         updateUI(0);
                     }
@@ -468,43 +436,12 @@
                     console.log( errorThrown );
                 }
             });
-          }
 
-         console.log("CY start Bot  --END");
-    }
-
-
-   var logTimer;
-   function getlog() {
-            var sid = getCookie('sid');
-            var url = '/wxbot/getlog/' + sid + '/';
-            $.ajax({
-                url: url,
-                //dataType: 'json',
-                type: 'get',
-                contentType: 'application/json',
-                //data: JSON.stringify( { "model" : $("input[name='model']:checked").val(), "description": "" } ),
-                success: function(data) {
-                    var result = JSON.parse(JSON.stringify(data));
-                    $('#log').html(result.desp);
-                },
-                error: function( jqXhr, textStatus, errorThrown ){
-                    console.log( errorThrown );
-                }
-            });
-
-    }
-    function startlog() {
-        logTimer = setInterval(getlog, 3000);
-    }
-
-    function stoplog() {
-        clearInterval(logTimer);
-        $('#log').html("");        
     }
 
     window.onload = function() 
     {
+       showToast('error',"您的微信机器人已在运行");
        console.log("in onload");
        checkWxBotInitStatus();
     }
