--- a/maker/uc/templates/uc_basic_info.html
+++ b/maker/uc/templates/uc_basic_info.html
@@ -5,59 +5,82 @@
 {% block title %}流氓兔{% endblock %}
 {% block meta %}
 <meta />
+<style>
+  .form-group {
+    margin-top:20px;
+  }
+  .form-group input{
+    width: 518px;
+  }
+</style>
 {% endblock %}
 
 {% block uc_title %}<span>基本资料</span>{% endblock %}
 {% block uc_position %}用户中心{% endblock %}
 {% block uc_content %}
- <form class="form-horizontal">
+ <form class="form-horizontal" accept="" method="post" id="form">
+  {% csrf_token %}
 <div class="box box-primary">
 <div class="box-header with-border">
   <h3 class="box-title"></h3>
 </div>
-
-                  <div class="form-group">
+            <div class="form-group">
                     <label for="inputName" class="col-sm-2 control-label">账号</label>
 
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                     {{form.username}}
+                      <!-- <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;" value="{{form.company_name.value }}"> -->
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="inputEmail" class="col-sm-2 control-label">别名</label>
 
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="" style="width: 518px;">
+                     {{form.nickname}}
+                      <!-- <input type="text" class="form-control" id="inputEmail" placeholder="" style="width: 518px;"> -->
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="inputName" class="col-sm-2 control-label">性别</label>
 
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                      <!-- <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;"> -->
+                      {{form.gender}}
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="inputExperience" class="col-sm-2 control-label">Email</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                     {{form.email}}
+                      <!-- <input type="email;" class="form-control" id="inputName" placeholder="" style="width: 518px;"> -->
                     </div>
                   </div>
 
                   <div class="form-group">
                     <label for="inputSkills" class="col-sm-2 control-label">电话号码</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    {{form.phone_number}}
+                     <!--  <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;"> -->
                     </div>
                   </div>
-                   
-     </br>
-     <div class="box-footer">
-<button type="submit" class="btn btn-primary">保存</button>
+
+                  <div class="form-group">
+                    <label for="inputSkills" class="col-sm-2 control-label">地址</label>
+                    <div class="col-sm-10">
+                    {{form.address}}
+                     <!--  <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;"> -->
+                    </div>
+                  </div>
+       </br>
+       <div class="box-footer">
+      <button type="submit" class="btn btn-primary">保存</button>
 </div>
 </div>
-
-
-
 </form>
+{% endblock %}
+{% block my_js %}
+<script>
+   $(".form-group #id_username").attr("disabled",true); 
+   $(".form-group input").addClass('form-control');
+</script>
 {% endblock %}
