--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -29,9 +29,9 @@
                         <div class="banner">
                             <div class="banner_container">
                         <div class="banner_right">
-                            <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
-                            <h2>Awesome , Clean & Unique Template</h2>
-                            <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
+                            <h1>欢迎访问<span class="color1">B</span>otDocker<span class="color1">.</span></h1>
+                            <h2>快速构建您的专属智能机器人的平台</h2>
+                            <a href="/home/about/" title="了解更多" class="btn btn-primary btn-normal btn-inline " target="_self">了解BotDocker更多</a>
                         </div>
                         <div class="clearfix"></div>
                             </div>
@@ -41,9 +41,9 @@
                         <div class="about_banner">
                             <div class="banner_container">
                         <div class="banner_right">
-                            <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
-                            <h2>There are many variations</h2>
-                            <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
+                            <h1>欢迎访问<span class="color1">B</span>otDocker<span class="color1">.</span></h1>
+                            <h2>快速构建您的专属智能机器人的平台</h2>
+                            <a href="/home/about/" title="了解更多" class="btn btn-primary btn-normal btn-inline " target="_self">了解BotDocker更多</a>
                         </div>
                         <div class="clearfix"></div>
                             </div>
